PyBluez CHANGELOG file

this file contains a list of changes through the different versions of PyBluez.

changes from 0.18 to 0.19
-------------------------

GNU/Linux:
    Added setl2capsecurity() method to BluetoothSocket
    Fixed get_l2cap_options(), set_l2cap_options(), set_l2cap_mtu()
    Added abovementioned functions as socket methods
    Added BT_SECURITY_*, L2CAP_MODE_* constants

changes from 0.17 to 0.18 (Nov 25, 2009)
----------------------------------------

windows:
    support Visual C++ 2008 Express Edition for Python 2.6 (this should
    add support for Windows Vista and Windows 7) (Lukas Hetzenecker)
    include widcomm/util.h in source distribution

changes from 0.16 to 0.17 (Oct 15, 2009)
----------------------------------------

GNU/Linux:
    bugfix for linux 2.6.30+ zero out struct sockaddr
    DeviceDiscoverer may specify bluetooth device_id (roelhuybrechts)
    DeviceDiscoverer do not override duration parameter (roelhuybrechts)

changes from 0.15 to 0.16 (Feb 5, 2009)
---------------------------------------
  fix variable naming in example/simple/inquiry.py (M. Harris Bhatti)
windows:
    only import msbt if widcomm fails
    fix memory error in MSBT stack
    widcomm comment out debugging statements

GNU/Linux:
    fix examples to import bluetooth._bluetooth

changes from 0.14 to 0.15 (Jan 21, 2008)
----------------------------------------
GNU/Linux:
    don't hardcode duration in discover_devices() to 8 (Gustavo Chain)
win32:
    search for wbtapi.dll before trying to import widcomm

changes from 0.13 to 0.14 (Nov 12, 2007)
----------------------------------------
GNU/Linux:
    fix device class parsing bug in inquiry-with-rssi (Pepe Aracil)

changes from 0.12 to 0.13 (August 30, 2007)
-------------------------------------------
GNU/Linux:
    Oops, stupid bug introduced from last bugfix

changes from 0.11 to 0.12 (August 29, 2007)
-------------------------------------------
GNU/Linux:
    fixed _checkaddr bug (reported by Giovanni)
